--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "helmet": "^3.22.0",
+    "https": "^1.0.0",
     "js-htmlencode": "^0.3.0",
     "method-override": "^3.0.0",
     "mysql": "^2.18.1",
+    "openssl": "^1.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
