--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-flash": "0.0.2",
+    "express-force-ssl": "^0.3.2",
     "express-session": "^1.17.1",
     "helmet": "^3.22.0",
+    "http": "0.0.1-security",
     "https": "^1.0.0",
     "js-htmlencode": "^0.3.0",
     "method-override": "^3.0.0",
     "mysql": "^2.18.1",
+    "net": "^1.0.2",
     "openssl": "^1.1.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
