--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "openssl": "^1.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
     "nodemon": "^2.0.3"
   }
 }
