--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev-start": "nodemon server.js"
+    "dev-start": "nodemon server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
